<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/foodAFAFAF"
    tools:context=".login.SignUp">

   <View
       android:id="@+id/view3"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="130dp"
       android:background="@drawable/bg_onboard_menu"
       app:layout_constraintEnd_toEndOf="@+id/img_avartar"
       app:layout_constraintHorizontal_bias="0.684"
       app:layout_constraintStart_toStartOf="@+id/img_avartar"
       app:layout_constraintTop_toTopOf="parent" />

   <ImageView
       android:id="@+id/img_avartar"
       android:layout_width="110dp"
       android:layout_height="110dp"
       android:layout_marginTop="90dp"
       android:background="@drawable/avatar"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/text_sign_up"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:fontFamily="@font/gilroy_medium"
       android:text="@string/sign_up_1"
       android:textColor="@color/food272727"
       android:textSize="24dp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="@+id/img_avartar"
       app:layout_constraintHorizontal_bias="0.091"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/img_avartar" />

   <EditText
       android:id="@+id/edit_sn_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="150dp"
       android:inputType="text"
       android:ems="10"
       android:background="@drawable/form_login"
       android:fontFamily="@font/gilroy_medium"
       android:hint="@string/username"
       android:textColor="@color/food565454"
       android:textColorHint="@color/food8F8F8F"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/view3" />

   <EditText
       android:id="@+id/edit_email"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/form_login"
       android:ems="10"
       android:layout_marginTop="25dp"
       android:fontFamily="@font/gilroy_medium"
       android:hint="@string/email"
       android:inputType="textEmailAddress"
       android:textColor="@color/food565454"
       android:textColorHint="@color/food8F8F8F"
       app:layout_constraintEnd_toEndOf="@+id/edit_sn_name"
       app:layout_constraintStart_toStartOf="@+id/edit_sn_name"
       app:layout_constraintTop_toBottomOf="@+id/edit_sn_name" />

   <EditText
       android:id="@+id/edit_Phone"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/form_login"
       android:layout_marginTop="25dp"
       android:ems="10"
       android:fontFamily="@font/gilroy_medium"
       android:hint="Phone"
       android:inputType="phone"
       android:textColor="@color/food565454"
       android:textColorHint="@color/food8F8F8F"
       app:layout_constraintEnd_toEndOf="@+id/edit_email"
       app:layout_constraintStart_toStartOf="@+id/edit_email"
       app:layout_constraintTop_toBottomOf="@+id/edit_email" />

   <EditText
       android:id="@+id/edit_sn_phone"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/form_login"
       android:layout_marginTop="25dp"
       android:ems="10"
       android:fontFamily="@font/gilroy_medium"
       android:hint="@string/password"
       android:inputType="textPassword"
       android:textColor="@color/food565454"
       android:textColorHint="@color/food8F8F8F"
       app:layout_constraintEnd_toEndOf="@+id/edit_Phone"
       app:layout_constraintStart_toStartOf="@+id/edit_Phone"
       app:layout_constraintTop_toBottomOf="@+id/edit_Phone" />

   <Button
       android:id="@+id/bnt_login"
       android:layout_marginTop="25dp"
       android:layout_width="350dp"
       android:layout_height="75dp"
       android:backgroundTint="@color/food272727"
       android:fontFamily="@font/gilroy_medium"
       android:text="@string/login_1"
       android:textColor="@color/white"
       android:textSize="23dp"
       android:textStyle="normal"
       app:layout_constraintEnd_toEndOf="@+id/edit_sn_phone"
       app:layout_constraintStart_toStartOf="@+id/edit_sn_phone"
       app:layout_constraintTop_toBottomOf="@+id/edit_sn_phone" />

   <TextView
       android:id="@+id/texthint"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="36dp"
       android:fontFamily="@font/gilroy_medium"
       android:text="@string/accound"
       android:textColor="@color/foodB0B0B0"
       android:textSize="15dp"
       android:textStyle="normal"
       app:layout_constraintStart_toStartOf="@+id/bnt_login"
       app:layout_constraintTop_toBottomOf="@+id/bnt_login" />

   <TextView
       android:id="@+id/sign_up"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="10dp"
       android:fontFamily="@font/gilroy_medium"
       android:text="@string/login_1"
       android:textColor="@color/food2F2F2F"
       android:textSize="14dp"
       android:textStyle="normal"
       app:layout_constraintBottom_toBottomOf="@+id/texthint"
       app:layout_constraintStart_toEndOf="@+id/texthint"
       app:layout_constraintTop_toTopOf="@+id/texthint"
       app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>